# cansw_processor_canards

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32H733VGTX_FLASH.ld  cansw_processor_canards.ioc  cmake_install.cmake  processor_board.ioc  processor_board_Debug.launch  processor_board_Release.launch
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci-pipeline.yml  clang-format-check.yml  unit-tests.yml
Core/Inc/: FreeRTOSConfig.h  i2c.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Core/Src/: adc.c  cordic.c  fdcan.c  fmac.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  sdmmc.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
STM32Cube/: .cproject  .mxproject
STM32Cube/Core/Inc/: FreeRTOSConfig.h  fmac.h
STM32Cube/Core/Src/: adc.c  fdcan.c  fmac.c  gpio.c  i2c.c  sdmmc.c  tim.c  usart.c
STM32Cube/src/drivers/led/: led.c  led.h
STM32Cube/src/lib/printf/: printf.c
Untitled 2.xcworkspace/xcuserdata/sat-oo.xcuserdatad/: UserInterfaceState.xcuserstate
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  CMakelists.txt
scripts/: cppcheck.sh  csvparse.py  format.sh  logparse.py  run.sh  test.sh
src/: CMakeLists.txt
src/application/can_handler/: can_handler.c  can_handler.h
src/application/controller/: controller.c  controller.h  controller_algorithm.c  controller_algorithm.h  controller_module.c  controller_module.h  gain_scheduling.c  gain_scheduling.h  gain_table.c  gain_table.h
src/application/estimator/: ekf.c  ekf.h  estimator.c  estimator.h  estimator_module.c  estimator_module.h  estimator_types.h  pad_filter.c  pad_filter.h  projector.c  projector.h
src/application/estimator/model/: jacobians.c  jacobians.h  model_acceleration.c  model_acceleration.h  model_aerodynamics.c  model_aerodynamics.h  model_airdata.c  model_airdata.h  model_dynamics.c  model_dynamics.h  model_encoder.c  model_encoder.h  model_imu.c  model_imu.h  quaternion.c  quaternion.h
src/application/flight_phase/: flight_phase.c  flight_phase.h
src/application/health_checks/: health_checks.c  health_checks.h
src/application/hil/: CMakeLists.txt  hil.c  hil.h  simulator.c  simulator.h
src/application/imu_handler/: imu_handler.c  imu_handler.h
src/application/init/: init.c  init.h
src/application/logger/: log.c  log.h
src/application/state_estimation/: state_estimation.h
src/common/math/: math-algebra3d.c  math-algebra3d.h  math-wrapper.h  math.h
src/drivers/adc/: adc.c  adc.h
src/drivers/altimu-10/: LIS3MDL_regmap.h  LPS_regmap.h  LSM6DSO_regmap.h  altimu-10.c  altimu-10.h
src/drivers/gpio/: gpio.c  gpio.h
src/drivers/i2c/: i2c.c  i2c.h  i2c_handles.c  i2c_handles.h
src/drivers/led/: led.c  led.h
src/drivers/lsm6dsv32x/: lsm6dsv32x.c  lsm6dsv32x.h
src/drivers/movella/: movella.c  movella.h  movella_test.c
src/drivers/sd_card/: sd_card.c  sd_card.h
src/drivers/timer/: timer.c  timer.h
src/drivers/uart/: uart.c  uart.h
tests/: CMakeLists.txt
tests/freertos_sim/: CMakeLists.txt  FreeRTOSConfig.h  sim_controller.c  sim_example.c
tests/mocks/: FreeRTOS.h  fatfs.c  fatfs.h  hal_i2c.c  hal_i2c.h  hal_i2c_mock.c  hal_i2c_mock.h  hal_timer_mock.c  hal_timer_mock.h  hal_uart_mock.c  hal_uart_mock.h  log_mock.c  log_mock.h  mock_altimu_10.c  mock_altimu_10.h  mock_estimator.c  mock_estimator.h  mock_freertos.c  mock_freertos.h  mock_hal.c  mock_hal.h  mock_i2c_hal.c  mock_i2c_hal.h  mock_i2c_handles.c  mock_i2c_handles.h  mock_lsm6dsv32x.c  mock_lsm6dsv32x.h  mock_movella.c  mock_movella.h  mock_timer.c  mock_timer.h  queue.c  queue.h  semphr.c  semphr.h  stm32h7xx_hal.c  stm32h7xx_hal.h  stm32h7xx_hal_i2c.h  task.c  task.h  (+2 more)
tests/unit/: adc_test.cpp  airdata_jacobian_test.cpp  altimu_test.cpp  can_handler_test.cpp  common_math_test.cpp  controller_algo_test.cpp  controller_module_test.cpp  controller_test.cpp  ekf_test.cpp  estimator_filter.cpp  estimator_init_test.cpp  estimator_lib_test.cpp  estimator_module_test.cpp  estimator_task.cpp  estimator_test.cpp  estimator_test_airdata.cpp  estimator_type_test.cpp  estimator_update_values.cpp  example_test.cpp  flight_phase_test.cpp  gpio_test.cpp  health_checks_test.cpp  i2c_test.cpp  imu_handler_test.cpp  model_acceleration_test.cpp  model_airdata_test.cpp  model_dynamic_test.cpp  model_encoder_test.cpp  model_imu_test.cpp  pad_filter_test.cpp  projector_test.cpp  quaternion_test.cpp  sd_card_test.cpp  test_dummy.cpp  test_runner.cpp  timer_test.cpp  uart_test.cpp
tests/unit/utils/: math_testing_helpers.hpp  mock_helpers.hpp  mock_log.hpp  unit_test_helpers.hpp
